2006-02-21:
	* src/v4.c, src/v4.h (v4_save): make ccname a const char *.
	* src/v5.c, src/v5.h (v5_save): make ccname a const char *.
	* src/stash.c(_pam_krb5_stash_get): when we pick up v5 creds via either
	"external" or "use_shmem", do 524 conversion if we need to do so.
	* src/session.c(pam_sm_open_session): also create a v4 tktfile if
	KRB5CCNAME was already set.
	* src/afs5log.c, src/minikafs.c: use init_secure_context when possible.
	* src/Makefile.am: juggle deps so that linking works again.

2006-02-07:
	* src/pam_newpag.8.in: edit

2006-02-06:
	* src/options.c,src/options.h: break down and add an explicit option
	for disabling v4-via-as-req attempts
	* src/minikafs.c: don't try to convert creds for use in setting v4
	tokens when krb4_convert_524 is disabled.
	* src/v4.c: don't try to get initial creds if krb4_use_as_req is off.
	* src/pam_krb5.5.in,src/pam_krb5.8.in: document krb4_use_as_req.
	* src/pam_krb5.5.in,src/pam_krb5.8.in: point out that we turn on v4
	support if AFS is detected at run-time.
	* README: document krb4_use_as_req.
	* TODO: update because 2.2 was tagged a while ago

2006-01-26:
	* src/minikafs.c: wrap a debug message in an if (debugging) clause.
	* src/session.c: wrap a pair of debugging messages in an if (debugging)
	clause (#179037).
	* configure.ac: if $with_gnu_ld is set, set SYMBOLIC_LINKER_FLAG to
	the right variation on -Bsymbolic
	* src/Makefile.am: use the SYMBOLIC_LINKER_FLAG when linking modules

2006-01-16:
	* src/afs5log.1, src/pagsh.1: fix the bug reporting instructions.

2006-01-16:
	* src/password.c(pam_sm_chauthtok): fix handling of no-password-given
	cases.
	* src/harness.c: work around Linux-PAM actively trying to keep us from
	doing what we're doing.  Adjust command-line parsing to allow both
	password-change phases to be called out.
	* tests/run-tests.c: add a password-not-good-enough-at-change-time
	test case.
	* src/password.c(pam_sm_chauthtok): cast away a couple of compiler
	warnings.